[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Towers/GenericTower.gd" type="Script" id=2]
[ext_resource path="res://src/Projectiles/GenericProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1519, 31.9993 )

[sub_resource type="CircleShape2D" id=2]
radius = 272.264

[node name="GenericTower" type="Area2D"]
script = ExtResource( 2 )
projectile = ExtResource( 3 )
price = 1

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="Clickbox" type="CollisionShape2D" parent="." groups=[
"towers",
]]
shape = SubResource( 1 )

[node name="range" type="Area2D" parent="."]

[node name="range_shape" type="CollisionShape2D" parent="range"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="range" to="." method="_on_range_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
